--- a/Android/PlayerProj/app/build.gradle
+++ b/Android/PlayerProj/app/build.gradle
@@ -45,5 +45,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.airbnb.android:lottie:4.2.2'
+    implementation 'com.blankj:utilcodex:1.31.0'
+
 
 }
