--- a/Android/PlayerProj/build.gradle
+++ b/Android/PlayerProj/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         google()
         // jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
@@ -22,6 +23,7 @@ allprojects {
         google()
         // jcenter()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     tasks.withType(Javadoc).all { enabled = false }
 }
