--- a/Android/PlayerProj/app/src/main/AndroidManifest.xml
+++ b/Android/PlayerProj/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:requestLegacyExternalStorage="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".SampleLottieBlendActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SampleVideoViewActivity"
+            android:exported="false" />
         <activity
             android:name=".SampleLottieAnimationActivity"
             android:exported="false" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
