lottie blend library sample

--- a/Android/PlayerProj/lottie_blend/build.gradle
+++ b/Android/PlayerProj/lottie_blend/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation rootProject.ext.dependencies['viewmodel_ktx']
     implementation rootProject.ext.dependencies['utilcodex']
     implementation rootProject.ext.dependencies['ffmpeg_command_lite']
+    api 'jp.co.cyberagent.android:gpuimage:2.1.0'
+
 }
