--- a/Android/PlayerProj/config.gradle
+++ b/Android/PlayerProj/config.gradle
@@ -10,5 +10,6 @@ ext {
             'androidx.appcompat': 'androidx.appcompat:appcompat:1.4.0',
             'core_ktx'          : 'androidx.core:core-ktx:1.6.0',
             'utilcodex'         : 'com.blankj:utilcodex:1.31.0',
+            'gson'              : 'com.google.code.gson:gson:2.8.9',
     ]
 }
