--- a/Android/PlayerProj/app/build.gradle
+++ b/Android/PlayerProj/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 android {
     compileSdkVersion 31
     defaultConfig {
-        applicationId "com.tencent.qgame.playerproj"
+        applicationId rootProject.ext.android["applicationId"]
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
@@ -54,8 +54,8 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
     implementation 'com.github.AnJoiner:FFmpegCommand:1.2.1-lite'
-    implementation 'com.google.android.material:material:1.4.0'
     // implementation 'com.github.AnJoiner:FFmpegCommand:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
 
