--- a/Android/PlayerProj/app/src/main/AndroidManifest.xml
+++ b/Android/PlayerProj/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".gpu.SampleGpuViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SampleAgingBlendActivity"
+            android:exported="false" />
         <activity
             android:name=".SampleMaskColorActivity"
             android:exported="false" />
