--- a/Android/PlayerProj/config.gradle
+++ b/Android/PlayerProj/config.gradle
@@ -1,15 +1,24 @@
 ext {
     kotlin_version = '1.6.0'
 
+    android = [
+            compileSdkVersion: 31,
+            minSdkVersion    : 21,
+            targetSdkVersion : 30,
+
+            applicationId: rootProject.hasProperty('PACKAGE_NAME') && !(project.property('PACKAGE_NAME') == "NULL") ? project.property('PACKAGE_NAME')
+                    : /*"com.test.at.face"*/ "com.tencent.qgame.playerproj"
+    ]
+
     dependencies = [
-            'ffmpeg_command_lite'    : 'com.github.AnJoiner:FFmpegCommand:1.2.1-lite',
-            'ffmpeg_command'    : 'com.github.AnJoiner:FFmpegCommand:1.2.1',
-            'lottie'            : 'com.airbnb.android:lottie:4.2.2',
-            'viewmodel_ktx'     : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1',
-            'android.material'  : 'com.google.android.material:material:1.4.0',
-            'androidx.appcompat': 'androidx.appcompat:appcompat:1.4.0',
-            'core_ktx'          : 'androidx.core:core-ktx:1.6.0',
-            'utilcodex'         : 'com.blankj:utilcodex:1.31.0',
-            'gson'              : 'com.google.code.gson:gson:2.8.9',
+            'ffmpeg_command_lite': 'com.github.AnJoiner:FFmpegCommand:1.2.1-lite',
+            'ffmpeg_command'     : 'com.github.AnJoiner:FFmpegCommand:1.2.1',
+            'lottie'             : 'com.airbnb.android:lottie:4.2.2',
+            'ktx_viewModel'      : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1',
+            'android.material'   : 'com.google.android.material:material:1.4.0',
+            'androidx.appcompat' : 'androidx.appcompat:appcompat:1.4.0',
+            'ktx_core'           : 'androidx.core:core-ktx:1.6.0',
+            'utilcodex'          : 'com.blankj:utilcodex:1.31.0',
+            'gson'               : 'com.google.code.gson:gson:2.8.9',
     ]
 }
