--- a/Android/PlayerProj/app/src/main/AndroidManifest.xml
+++ b/Android/PlayerProj/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".gpu.SampleGpuMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".gpu.SampleGpuViewActivity"
             android:exported="false" />
         <activity
